# container-manager

./: .gitignore  README.md  manager.spec  nuitka-config.yaml  pyproject.toml
.github/workflows/: build.yaml
src/container_manager/: __init__.py  settings.py
src/container_manager/container/: __init__.py  compose.yaml
src/container_manager/settings/: __init__.py
src/container_manager/ui/: __init__.py  settings.py  styles.py
src/main/: manager.py
