[project]
name = "container-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Brooks", email = "d.brooks@auckland.ac.nz" }
]
requires-python = ">=3.14"
dependencies = [
    "python-on-whales>=0.81.0",
    "ttkbootstrap>=2.0.0",
]

[dependency-groups]
dev = [
    "nuitka[all]>=4.1.3",
    "tkreload>=1.0.4",
]

[project.scripts]
container-manager = "container_manager:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
