[project]
name = "container-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Brooks", email = "d.brooks@auckland.ac.nz" }
]
requires-python = ">=3.13"
dependencies = [
    "podman-compose>=1.6.0",
    "python-on-whales>=0.81.0",
    "ttkbootstrap>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.21.0"
]

[project.scripts]
container-manager = "main.manager:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
